--- a/offline.html
+++ b/offline.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Sin conexión - Movia TI</title>
-  <style>
-    body { font-family: Arial; text-align: center; margin-top: 20%; color: #444; }
-    h1 { color: #007bff; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sin conexión - Movia TI</title>
+<style>
+  body { text-align: center; font-family: Arial; margin-top: 20%; color: #555; }
+  img { width: 100px; opacity: 0.7; }
+</style>
 </head>
 <body>
-  <h1>🚐 Movia TI</h1>
-  <p>No tienes conexión a Internet.<br>Pero podrás seguir consultando tus rutas guardadas.</p>
+  <img src="images/logo.png" alt="Movia TI">
+  <h2>No hay conexión a Internet</h2>
+  <p>Vuelve a intentarlo cuando tengas acceso a la red.</p>
 </body>
 </html>
