--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
         <button id="fixNearestBtn" class="secondary"><span class="material-symbols-rounded">pin_drop</span> Fijar unidad más cercana</button>
         <button id="historyBtn" class="secondary"><span class="material-symbols-rounded">history</span> Historial de viajes</button>
       </div>
+      <button id="enableLocationBtn" class="accent" style="display:none;"><span class="material-symbols-rounded">my_location</span> Activar ubicación</button>
     </section>
     <div id="map"></div>
     <button id="chatNavBtn" class="chat-fab" aria-label="Chat IA">
@@ -389,6 +390,7 @@
     </section>
   </main>
 
-  <script type="module" src="app.js"></script>
+  <script type="module" src="./app.js"></script>
+
 </body>
 </html>
